--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/conclusion.tex
@@ -13,9 +13,10 @@
 \end{frame}
 
 \begin{frame}{評価結果}
+    ケーススタディの結果は以下を示した
     \begin{itemize}
-        \item ケーススタディの結果は, 提案されたスケジューラが実際のシナリオでのエンドツーエンドレイテンシに関して, 既存の ROS2 スケジューリングよりも優れていることを示した
-        \item また, 分析技術がレイテンシの上界を厳密に制限し, 最先端技術と比較してスケジューラビリティが向上することを示した
+        \item 提案されたスケジューラが実際のシナリオでのエンドツーエンドレイテンシに関して, 既存の ROS2 スケジューリングよりも優れている
+        \item 分析技術がレイテンシの上界を厳密に制限し, 最先端技術と比較してスケジューラビリティが向上する
     \end{itemize}
 \end{frame}
 
