--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/challenges.tex
@@ -20,7 +20,7 @@
     \fitimage{
         \begin{itemize}
             \item 10 個のコールバックで構成される 2 つのチェーンを使用する
-            \item チェーン 1 はチェーン 2 よりも重要であると想定する
+            \item チェーン 1 はチェーン 2 よりも重要であるとする
         \end{itemize}
     }{challenge_model.png}
 \end{frame}
@@ -46,7 +46,7 @@
 \begin{frame}{[課題 1] 例}
     \fitimage{
         \begin{itemize}
-            \item 図は, 2 つのチェーンが一緒に実行されるときの単一のエグゼキュータ内のコールバックのスケジューリングタイムラインを示している
+            \item 図は, 2 つのチェーンが一緒に実行されるときの単一のエグゼキュータ内のコールバックのスケジューリングタイムライン
             \item ROS2 は両方のチェーンを公平に処理することが分かる
         \end{itemize}
     }{challenge1_example}
@@ -54,7 +54,7 @@
 
 \begin{frame}{[課題 1] 問題点}
     \fitimage{
-        公平性に基づくスケジューリングは, 非常に高いレイテンシが発生するため, セーフティクリティカルチェーンのリアルタイム性を危険にさらす可能性がある
+        公平性に基づくスケジューリングは高いレイテンシが発生するため, セーフティクリティカルチェーンのリアルタイム性を危険にさらす可能性がある
     }{challenge1_result.png}
 \end{frame}
 
@@ -64,7 +64,7 @@
       \begin{itemize}
         \item デフォルトでは, エグゼキュータは Linux カーネルの Completely Fair Scheduler (CFS)~\cite{wong2008fairness} によってスケジュールされる
         \item CFSの下では, 重要度が高いチェーンからのコールバックを実行しているエグゼキュータに予測可能な優先度を付けることは困難
-        \item システム開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 は公式のインターフェイスを提供していない
+        \item 開発者は OS レベルの優先度をエグゼキュータに手動で割り当てることができるが, ROS2 は公式のインターフェイスを提供していない
         \item ROS2 エグゼキュータの優先度の割り当てに関する一般的なガイドラインは無い
       \end{itemize}
     \end{block}
@@ -72,18 +72,19 @@
 
 \begin{frame}{[課題2] 直観的な対策}
     \fitimage{
-        \begin{itemize}
-            \item 直感的な対策は, 重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てること
-            \item チェーン1の全てのコールバックを含むエグゼキュータの優先度を99とし, チェーン2の他のエグゼキュータの優先度98とした場合のスケジュールタイムラインを図に示す
-        \end{itemize}
+        \begin{block}{直観的な対策}
+            重要なチェーンを実行しているエグゼキュータに最高の優先度を割り当てる
+        \end{block}
+        \vspace{5mm}
+        チェーン1の全てのコールバックを含むエグゼキュータの優先度を99とし, チェーン2のエグゼキュータの優先度98とした場合のスケジュールタイムライン
     }{challenge2_timeline.png}
 \end{frame}
 
 \begin{frame}{[課題2] 直観的な方法の問題点}
     \fitimage{
         \begin{itemize}
-            \item インスタンス間の自己干渉によって発生するチェーン 2 の長いレイテンシの問題は解決されない
-            \item さらに, 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先度の割り当てはより困難になる
+            \item 自己干渉によるチェーン 2 の長いレイテンシの問題は解決されない
+            \item 異なる重要度を持つチェーンからのコールバックが 1 つのノードに混在している場合, コールバックを異なるエグゼキュータに割り当てることができないため, エグゼキュータの優先度の割り当てはより困難になる
         \end{itemize}
     }{challenge2_result.jpg}
 \end{frame}
