--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/evaluation.tex
@@ -66,7 +66,7 @@
 \end{frame}
 
 \begin{frame}{コールバックの WCET計測方法}
-    組み込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの観測された最大の実行時間を WCET として選択した
+    組み込みプラットフォームでの 5,000 回の実行から各コールバックの実行時間を測定し, そのコールバックの観測された最大の実行時間を WCET として選択
 \end{frame}
 
 \begin{frame}{ケーススタディ I (ユニプロセッサシステム)}
@@ -80,10 +80,12 @@
 
 \begin{frame}{ケーススタディ I 実験環境}
     \begin{itemize}
-        \item コールバックは特定のバジェット額で同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
+        \item コールバックは固有のバジェットで同じ予約に割り当てられ, コールバックの優先度は ROS2-SD のコールバックのインデックスの降順で与えられる
         \item チェーン $1\left(\Gamma^{1}\right)$ はチェーン $2\left(\Gamma^{2}\right)$ よりも優先度が高いとする
-        \item ROS2PiCAS でのバジェットの影響を評価するために, 2 つのチェーン $\left(\Gamma^{1}\right.$ および $\left.\Gamma^{2}\right)$ と同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成した
-        \item このスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能なバジェットを制限する
+        \item ROS2PiCAS でのバジェットの影響を評価するために, 2 つのチェーンと同じ周期で実行され, システムで最も高い優先度を持つ定期的なスレッドを作成
+              \begin{itemize}
+                  \item このスレッドの実行時間を調整することで, ROS2-PiCAS の利用可能なバジェットを制限する
+              \end{itemize}
     \end{itemize}
 \end{frame}
 
@@ -101,10 +103,12 @@
 \end{frame}
 
 \begin{frame}{ケーススタディ I 考察2}
-    \begin{itemize}
-        \item また, ROS2-PiCAS の 2 つのチェーンのエグゼキュータの優先度を周期的なスレッドよりも高くして, 別の実験を行った
-        \item 図の黄色の線で示されているように, チェーンは定期的なスレッドによって干渉されないため, 利用可能なバジェットに関係なくレイテンシが一貫している
-    \end{itemize}
+    \fitimage{
+        \begin{itemize}
+            \item また, ROS2-PiCAS の 2 つのチェーンのエグゼキュータの優先度を周期的なスレッドよりも高くして, 別の実験を行った
+            \item 図の黄色の線で示されているように, チェーンは定期的なスレッドによって干渉されないため, 利用可能なバジェットに関係なくレイテンシが一貫している
+        \end{itemize}
+    }{case_study1_result}
 \end{frame}
 
 \begin{frame}{ケーススタディ II (マルチコアシステム)}
@@ -127,15 +131,15 @@
 \end{frame}
 
 \begin{frame}[label=latency]{ケーススタディ II 実験環境2}
-    \begin{itemize}
-        \item 実験で観測されたレイテンシは, タイマコールバックの実行開始時刻を記録することで得られたものであり, リリース時刻ではない
-        \item これは, ROS2が最初のリリースオフセットを設定するためのサポートを欠いているため
-        \forme{
+    実験で観測されたレイテンシは, タイマコールバックの実行開始時刻を記録することで得られたものであり, リリース時刻ではない
+    \notes{ROS2が最初のリリースオフセットを設定するためのサポートを欠いているため}
+    \forme{
+        \begin{itemize}
             \item しかし, ROS2-PiCASでは, チェーン1--4はそれぞれ異なるCPUコアの最も優先度が高いエグゼキュータに割り当てられているため, その開始時刻とリリース時刻は全く同じである
             \item チェーン5とチェーン6がそれぞれチェーン1とチェーン4と同じCPUコアに割り当てられていても, ROS2-PiCAS下では, それらのエグゼキュータの優先度と周期を考慮すれば, リリース時間ベースのレイテンシを容易に見積もることができる
             \item しかし, ROS2およびROS2-SDでは, リリース時間ベースのレイテンシを直感的に見積もることができない
-        }
-    \end{itemize}
+        \end{itemize}
+    }
 \end{frame}
 
 \begin{frame}{ケーススタディ II 結果1}
@@ -159,15 +163,15 @@
 
 \begin{frame}{ケーススタディ II PiCASの問題点}
     \begin{columns}
-    \begin{column}{0.8\textwidth}
-        \begin{itemize}
-            \item ROS2-PiCAS でのチェーン 6 の観測および分析されたレイテンシは, 他の手法より悪い
-            \item この現象を次の 2 つの理由から説明する
-        \end{itemize}
-    \end{column}
-    \begin{column}{0.2\textwidth}
-        \fullimage{chain6_latency}
-    \end{column}
+        \begin{column}{0.8\textwidth}
+            \begin{itemize}
+                \item ROS2-PiCAS でのチェーン 6 の観測および分析されたレイテンシは, 他の手法より悪い
+                \item この現象を次の 2 つの理由から説明する
+            \end{itemize}
+        \end{column}
+        \begin{column}{0.2\textwidth}
+            \fullimage{chain6_latency}
+        \end{column}
     \end{columns}
 \end{frame}
 
@@ -177,7 +181,7 @@
         \setlength{\linewidth}{0.98\columnwidth}
         \begin{itemize}
             \item ROS2-PiCAS では, 優先度の高いチェーン 4 がチェーン 6 に複数回干渉する可能性がある
-        \item 対してデフォルト ROS2 スケジューラでは, ノンプリエンプティブコールバック実行および公平性に基づくスケジューリングにより, チェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
+            \item 対してデフォルト ROS2 スケジューラでは, ノンプリエンプティブコールバック実行および公平性に基づくスケジューリングにより, チェイン 4 とチェイン 6 が互いに 1 回 だけブロックできる
         \end{itemize}
     \end{block}
     \begin{block}{理由2}
@@ -203,7 +207,7 @@
 
 \begin{frame}{ケーススタディ III 考察}
     \begin{itemize}
-        \item ROS2-PiCAS は, 最も重要なチェーン, すなわちチェーン 1 とチェーン 2 の平均エンドツーエンドレイテンシをそれぞれ $85 \%$ と $90 \%$ まで削減する
+        \item ROS2-PiCAS は, 最も重要なチェーン, すなわちチェーン 1 とチェーン 2 の平均エンドツーエンドレイテンシをそれぞれ $85 \%$ と $90 \%$ まで削減
         \item ROS2-PiCAS の分析ではチェーンの厳密な上界が示されたが, ROS2-SD の分析ではこの過負荷システムのテストに失敗した
     \end{itemize}
 \end{frame}
@@ -222,7 +226,7 @@
 \end{frame}
 
 \begin{frame}{実験マシン}
-    全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行われる
+    全ての実験は, デュアル AMD EPYC 7452 $2.35 \mathrm{GHz}$ プロセッサを搭載したマシンで行う
 \end{frame}
 
 \begin{frame}{ワークロードの生成方法}
@@ -242,11 +246,11 @@
 
 \begin{frame}{スケジューラビリティテストの比較 [結果考察]}
     \begin{itemize}
-        \item どちらのアプローチでも, 利用率が高くなるとスケジューラビリティは低下する
+        \item どちらのアプローチでも, 利用率が高くなるとスケジューラビリティは低下
         \item ROS2-PiCAS は, 全ての利用設定で ROS2-SD よりも大幅に優れている
         \item ROS2-PiCAS では, チェーン 1--4 は, それぞれ CPU コア上の最も優先度の高いエグゼキュータに割り当てられるため, 常にスケジュール可能
-        \item ROS2-PiCAS ではチェーンの優先度が低くなると, スケジューラビリティが低下する
-        \item ROS2-SD では, チェーンデッドラインが短くなるにつれてスケジューラビリティが減少する
+        \item ROS2-PiCAS ではチェーンの優先度が低くなると, スケジューラビリティが低下
+        \item ROS2-SD では, チェーンデッドラインが短くなるにつれてスケジューラビリティが減少
     \end{itemize}
 \end{frame}
 
@@ -259,7 +263,7 @@
 \begin{frame}{解析実行時間の比較 [結果考察]}
     \begin{itemize}
         \item どちらのアプローチでも利用率が上がると分析時間は長くなるが, ROS2-SD は ROS2-PiCAS よりもはるかに遅い
-        \forme{\item ROS2-SD 分析の探索空間は可能な限り長いビジーウィンドウであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索する~\cite{casini2019response}}
+              \forme{\item ROS2-SD 分析の探索空間は可能な限り長いビジーウィンドウであり, 分析は全ての応答時間が収束するグローバルな固定点を繰り返し探索する~\cite{casini2019response}}
         \item 提案された分析は既存のアプローチよりもはるかに高速であり, 複雑なシステムへの適用やランタイム制御が可能
     \end{itemize}
 \end{frame}
