--- a/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/prior_knowledge.tex
+++ b/paper/2021_RTAS_PiCAS_New_Design_of_Priority_Driven_Chain_Aware_Scheduling_or_ROS2/prior_knowledge.tex
@@ -1,6 +1,6 @@
 % !TeX root = main.tex
 
-\section{Prior Knowledge}
+\section{PRIOR KNOWLEDGE}
 \label{sec: prior knowledge}
 
 \begin{frame}{前提知識}
@@ -8,9 +8,10 @@
     \item \ourl{ROS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603071}
     \item \ourl{ROS2}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683635767}
     \item \ourl{リアルタイム性}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683668573}
-    \item \ourl{コールバック}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231/Callback}
     \item \ourl{エンドツーエンドレイテンシ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2684616950}
+    \item \ourl{コールバック}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231/Callback}
+    \item \ourl{ノード}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2697103530}
     \item \ourl{エグゼキュータ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683373911/Executor}
-    \item \ourl{}
+    \item \ourl{エグゼキュータ固有のスケジューリング動作}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2698314224}
 \end{itemize}
 \end{frame}
