--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/prior_knowledge.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/prior_knowledge.tex
@@ -1,8 +1,17 @@
 % !TeX root = main.tex
 
-\section{Prior Knowledge}
+\section{PRIOR KNOWLEDGE}
 \label{sec: prior knowledge}
 
-\begin{frame}{}
-    \todo{}
+\begin{frame}{前提知識}
+    \begin{itemize}
+        \item \ourl{リアルタイム性}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683668573}
+        \item \ourl{エンドツーエンドレイテンシ}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2684616950}
+        \item \ourl{SCHED\_DEADLINE}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2692645566/SCHED_DEADLINE}
+        \item \ourl{ROS}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603071}
+        \item \ourl{ROS2}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683635767}
+        \item \ourl{publish/subscribeモデル}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2675048610}
+        \item \ourl{コールバック}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2683603231}
+        \item \ourl{エグゼキュータ固有のスケジューリング動作}{https://tier4.atlassian.net/wiki/spaces/EMBIV/pages/2698314224}
+    \end{itemize}
 \end{frame}
