--- a/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
+++ b/paper/2021_RTAS_Automatic_Latency_Management_for_ROS2_Benefits_Challenges_and_Open_Problems/main.tex
@@ -12,8 +12,8 @@
 
 
 %%%%% Front Cover %%%%%
-\title{Response-Time Analysis of ROS 2 Processing Chains Under Reservation-Based Scheduling}
-\subtitle{Euromicro Conference on Real-Time System (ECRTS), 2019}
+\title{Automatic Latency Management for ROS2 Benefits Challenges and Open Problems}
+\subtitle{IEEE Real-Time and Embedded Technology and Applications Symposium (RTAS), 2021}
 \author{矢野 篤志}
 \date{\today}
 \institute[EMBIV]{EMBIV}
@@ -25,8 +25,8 @@
 
 \maketitle
 
-\summary{1}{0}
-\input{abstract.tex}
+% \summary{0}{0}
+% \input{abstract.tex}
 
 \begin{frame}{Outline}
     \setbeamertemplate{section in toc}[sections numbered]
@@ -35,20 +35,22 @@
 
 \input{prior_knowledge.tex}
 \input{introduction.tex}
-\input{background.tex}
-\input{system_model.tex}
-\input{response_time_analysis_for_processing_chains.tex}
-\input{case_study.tex}
+\input{background_and_definitions.tex}
+\input{automatic_latency_management.tex}
+\input{design_of_ros_llama.tex}
+\input{practical_considerations.tex}
+\input{evaluation.tex}
+\input{open_problems_and_pragmatic_workarounds.tex}
 \input{related_work.tex}
-\input{limitations_extensions_and_conclusions.tex}
+\input{conclusion.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
